added a banner section

--- a/Style/style.css
+++ b/Style/style.css
@@ -1,34 +1,44 @@
-*{
-
-}
+* {}
 
 /* Font Style */
+.poppins-medium {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+}
 
+.inter-normal {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
 
 /* Button Style */
-
-.btn-style{
+.btn-style {
     color: #FFFFFF;
-    background-color: rgba(255, 88, 155, 1.00);
+    border-radius: 6px;
+    font-weight: 500;
+    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%, rgb(255, 19, 111) 99.994%);
     border: none;
     width: 170px;
     height: 50px;
+    padding: 16px 62px 16px 28px;
+    position: relative;
 }
 
 /* Max Width */
-.container{
+.container {
     max-width: 1280px;
     margin: auto;
 }
 
 /* Nav Style */
-nav{
+nav {
     display: flex;
     justify-content: space-between;
-    margin: 40px auto;
+    margin: 35px 0;
 }
 
-.scarch-items input{
+.scarch-items input {
     border-radius: 66px;
     padding: 15px 30px;
     width: 500px;
@@ -36,20 +46,67 @@ nav{
     border: none;
 }
 
-.scarch-items i{
+.scarch-items i {
     position: relative;
     right: 40px;
     color: #BABABA;
 }
 
-.nav-items{
+.nav-items {
     display: flex;
     gap: 24px;
     list-style: none;
 }
-.nav-items li a{
+
+.nav-items li a {
     text-decoration: none;
     color: #707070;
-    font-weight:500;
+    font-weight: 500;
+}
+
+/* Banner Section */
+
+.banner {
+    background-color: #FEEAE9;
+    display: flex;
+    width: 1280px;
+    height: 455px;
+    align-items: center;
+    gap: 140px;
+    border-radius: 15px;
+}
+
+.banner-container {
+    padding: 68px 0px 68px 46px;
+}
+
+.banner-container h2 {
+    color: rgb(31, 31, 31);
+    font-size: 56px;
+    font-weight: 700;
+    margin: 8px;
+}
+
+.banner-container p {
+    color: #4E4E4E;
+    margin-bottom: 8px;
+    max-width: 456px;
+}
+
+.banner-price {
+    color: #FF136F;
+    font-size: 40px;
+    font-weight: bold;
+    display: block;
+}
+
+.btn-style i {
+    position: absolute;
+    right: 45px;
+}
+
+.tv-images {
+    width: 402px;
+    height: 378px;
 }
 
