--- a/Style/style.css
+++ b/Style/style.css
@@ -1,4 +1,6 @@
-* {}
+* {
+    margin: 0 auto;
+}
 
 /* Font Style */
 .poppins-medium {
@@ -25,10 +27,16 @@
     position: relative;
 }
 
-/* Max Width */
+/* Share Style */
 .container {
     max-width: 1280px;
     margin: auto;
+}
+
+.section-title {
+    font-size: 36px;
+    font-weight: 600;
+    margin: 64px 0 24px 0;
 }
 
 /* Nav Style */
@@ -110,3 +118,38 @@ nav {
     height: 378px;
 }
 
+/* Categories */
+
+.categories-card-container {
+    display: flex;
+    gap: 26px;
+}
+
+.categories-card {
+    display: flex;
+    gap: 26px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    flex: 1;
+}
+
+.categories-card h3 {
+    color: white;
+    font-size: 36px;
+    font-weight: 500;
+}
+
+.categories-card:nth-child(1) {
+    background: linear-gradient(151.85deg, rgb(255, 156, 53) 14.537%,
+            rgb(255, 208, 25) 84.486%);
+}
+
+.categories-card:nth-child(2) {
+    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%, rgb(255, 19, 111) 99.994%);
+}
+
+.categories-card:nth-child(3) {
+    background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%, rgb(63, 7, 248) 74.29%);
+}
