--- a/Style/style.css
+++ b/Style/style.css
@@ -119,7 +119,9 @@ nav {
 }
 
 /* Categories */
-
+.categories{
+    margin: 52px auto;
+}
 .categories-card-container {
     display: flex;
     gap: 26px;
@@ -153,3 +155,64 @@ nav {
 .categories-card:nth-child(3) {
     background: linear-gradient(170.38deg, rgb(66, 137, 255) 15.416%, rgb(63, 7, 248) 74.29%);
 }
+
+/* Shoes & Bag Section */
+
+.shoes-backpack {
+    background-color: #F4F4F4;
+}
+
+.shoes-backpack-title {
+    display: flex;
+    justify-content: space-between;
+    gap: 960px;
+}
+
+.shoes-backpack-title h2 {
+    color: #1F1F1F;
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.shoes-backpack-title p {
+    color: #FF9D00;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+/* shoes */
+.shoes {
+    padding: 50px 0;
+}
+
+.shoes-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 25px;
+    align-items: center;
+}
+
+.shoes-card {
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    padding: 26px;
+}
+
+.shoes-card img {
+    width: 336px;
+    height: 202px;
+}
+
+.card-price {
+    display: block;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 12px;
+}
+
+.shoes-card .btn-style {
+    background: black;
+}
+
+/* Footer Section */
