--- a/Style/style.css
+++ b/Style/style.css
@@ -47,6 +47,34 @@ nav {
     margin: 35px 0;
 }
 
+.product-li {
+    position: relative;
+}
+
+.dropdown-nav-items {
+    position: absolute;
+    top: 30%;
+    left: 30px;
+    list-style: none;
+    background-color: rgb(255, 255, 255);
+    width: 130px;
+    padding: 10px 0px;
+    border-radius: 0 0 8px 8px;
+    text-align: center;
+    box-shadow: 0px 0px 4px -2px rgba(0,0,0,0.65);
+-webkit-box-shadow: 0px 0px 4px -2px rgba(0,0,0,0.65);
+-moz-box-shadow: 0px 0px 4px -2px rgba(0,0,0,0.65);
+    visibility: hidden;
+}
+
+.dropdown-nav-items {
+    margin: 5px 0;
+}
+.product-li:hover .dropdown-nav-items{
+    visibility: visible;
+    transition: 0.5s;
+    top: 70%;
+}
 .scarch-items input {
     border-radius: 66px;
     padding: 15px 30px;
